--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -124,8 +124,29 @@ ul.breadcrumb li a:hover {
 .exercise-container{
     padding: 40px;
     margin: auto;
+    width: 80%;
+    /*border-style: dotted;*/
+    /*border-color: black;*/
+    /*border-width: medium;*/
+    /*Add a shadow to the card*/
+    /*box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);*/
+    /*box-sizing: border-box;*/
+}
+.exercises-weekly-container{
+    padding: 40px;
+    margin: auto;
+    /*margin-left: 10%;*/
     width: 60%;
     /*Add a shadow to the card*/
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
+}
+.exercises-weekly-text-container{
+    margin: auto;
+    padding-left: 40px;
+    font-size: 25px;
+    /*border-style: dotted;*/
+    /*border-color: black;*/
+    /*border-width: medium;*/
+
 }
