--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -57,6 +57,9 @@ ul.breadcrumb li a:hover {
     margin-left: auto;
     margin-right: auto;
     width: auto;
+    height: auto;
+    max-width: 300px;
+    max-height: 300px;
     padding: 20px;
 }
 .answer-container{
