Change the exercise weekly container to scroll sideways instead of adding additional rows.

--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -141,6 +141,8 @@ ul.breadcrumb li a:hover {
     /*box-sizing: border-box;*/
 }
 .exercises-weekly-container{
+    overflow: auto;
+    white-space: nowrap;
     padding: 40px;
     margin: auto;
     margin-bottom: 1%;
