--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -37,6 +37,7 @@ ul.breadcrumb li a:hover {
     padding: 60px;
     margin: auto;
     width: 60%;
+    margin-bottom: 1%;
     /*Add a shadow to the card*/
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
@@ -68,19 +69,28 @@ ul.breadcrumb li a:hover {
     padding-bottom: 0px;
     margin:auto;
     margin-bottom: 1%;
-    width: 60%;
+    width: 100%;
     /*Add a shadow to the card*/
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
+    /*This gives the answer card a little bit more weight.*/
+    border-color: rgba(63, 69, 159, 0.2);
+    border-style: solid;
+    border-width: thin;
+    /*border-style: dotted;*/
+    /*border-color: black;*/
+    /*border-width: medium;*/
+
 }
 .answer-form-container{
     /*The styling for the answer form */
     margin: auto; /* Center the text container */
     /*width: 80%;*/
-    padding: 20px;
-    /*border-style: dotted;*/
-    /*border-color: black;*/
-    /*border-width: medium;*/
+    /*padding: 20px;*/
+    margin-bottom: 1%;
+    /*Align answer form with text.*/
+    margin-left: 10%;
+
 }
 /******************************************** Exercise Styling CSS ********************************************/
 .exercise{
