--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -69,7 +69,7 @@ ul.breadcrumb li a:hover {
     padding-bottom: 0px;
     margin:auto;
     margin-bottom: 1%;
-    width: 100%;
+    width: 80%;
     /*Add a shadow to the card*/
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
@@ -90,7 +90,9 @@ ul.breadcrumb li a:hover {
     margin-bottom: 1%;
     /*Align answer form with text.*/
     margin-left: 10%;
-
+    /*border-style: dotted;*/
+    /*border-color: black;*/
+    /*border-width: medium;*/
 }
 /******************************************** Exercise Styling CSS ********************************************/
 .exercise{
