--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -36,7 +36,7 @@ ul.breadcrumb li a:hover {
     /*Increase the margin a bit to make it look more */
     padding: 2%;
     margin: auto;
-    width: 80%;
+    width: 100%;
     margin-bottom: 1%;
     /*Add a shadow to the card*/
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
@@ -45,7 +45,7 @@ ul.breadcrumb li a:hover {
 .text-container{
     /*This container just contains the text to be displayed and applies the desired formating.*/
     margin: auto; /* Center the text container */
-    width: 80%;
+    width: 85%;
     /*Set the text color to black*/
     color: black;
     font-size: 150%;
@@ -86,6 +86,7 @@ ul.breadcrumb li a:hover {
     /*The styling for the answer form */
     margin: auto; /* Center the text container */
     /*width: 80%;*/
+    max-width: 50%;
     /*padding: 20px;*/
     margin-bottom: 1%;
     /*Align answer form with text.*/
@@ -98,11 +99,11 @@ ul.breadcrumb li a:hover {
 .exercise{
     /*width : 250px; */
     /*height: 200px;*/
-    width: 20%;
-    height: 17%;
+    width: 13%;
+    height: 10%;
     max-width: 20%;
     max-height: 17%;
-    margin: 20px;
+    margin: 15px;
     padding: 1%;
     /*Adding a grey border as standard - will turn green when exercise has been completed*/
     /*border: 1px solid lightgrey;*/
@@ -172,7 +173,7 @@ ul.breadcrumb li a:hover {
     margin: auto;
     /*padding-left: 40px;*/
     width: 85%;
-    font-size: 200%;
+    font-size: 150%;
     /*border-style: dotted;*/
     /*border-color: black;*/
     /*border-width: medium;*/
