--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -84,7 +84,6 @@ ul.breadcrumb li a:hover {
     /*border-width: thin;*/
     /*border-style: dotted;*/
     /*border-color: black;*/
-    /*border-width: medium;*/
 
 }
 .answer-form-container{
@@ -102,16 +101,29 @@ ul.breadcrumb li a:hover {
 }
 /******************************************** Exercise Styling CSS ********************************************/
 .exercise{
+    /*For Desktop*/
     /*width : 250px; */
     /*height: 200px;*/
-    width: 15%;
-    height: 12%;
-    max-width: 15%;
-    max-height: 12%;
-    margin: 2%;
+
+    /*For Mobile*/
+    width: auto;
+    height: auto;
+    /*width: 15%;*/
+    /*height: 12%;*/
+    /*max-width: 15%;*/
+    /*max-height: 12%;*/
+    /*This centers the elements for mobile view.*/
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 5%;
+    margin-top: 5%;
     padding: 1%;
     /*Adding a grey border as standard - will turn green when exercise has been completed*/
     /*border: 1px solid lightgrey;*/
+    /*border-style: dotted;*/
+    /*border-color: black;*/
+    /*border-width: medium;*/
 }
 /*These are added on top of the standard css for the exercise buttons on the main page.*/
 .exercise-completed{
@@ -154,15 +166,18 @@ ul.breadcrumb li a:hover {
 }
 /*Styling for the divider containing all the xercises on the main page*/
 .exercise-container{
-    padding: 2%;
-    margin: auto;
-    width: 100%;
+    /*padding: 2%;*/
+    /*margin: auto;*/
+    /*width: 100%;*/
     /*border-style: dotted;*/
     /*border-color: black;*/
     /*border-width: medium;*/
     /*Add a shadow to the card*/
     /*box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);*/
     /*box-sizing: border-box;*/
+    /*border-style: dotted;*/
+    /*border-color: black;*/
+    /*border-width: medium;*/
 }
 .exercises-weekly-container{
     padding: 2%;
@@ -173,11 +188,12 @@ ul.breadcrumb li a:hover {
     /*Add a shadow to the card*/
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
+
 }
 .exercises-weekly-text-container{
     margin: auto;
     /*padding-left: 40px;*/
-    width: 85%;
+    width: 100%;
     font-size: 150%;
     /*border-style: dotted;*/
     /*border-color: black;*/
