--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -106,8 +106,8 @@ ul.breadcrumb li a:hover {
     /*height: 200px;*/
 
     /*For Mobile*/
-    width: auto;
-    height: auto;
+    width: 75%;
+    height: 75%;
     /*width: 15%;*/
     /*height: 12%;*/
     /*max-width: 15%;*/
@@ -191,9 +191,11 @@ ul.breadcrumb li a:hover {
 
 }
 .exercises-weekly-text-container{
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2%;
     /*padding-left: 40px;*/
-    width: 100%;
+    width: 90%;
     font-size: 150%;
     /*border-style: dotted;*/
     /*border-color: black;*/
