--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -38,7 +38,7 @@ ul.breadcrumb li a:hover {
     /*margin: auto;*/
     /*width: 100%;*/
     margin-bottom: 1%;
-    Add a shadow to the card
+    /*Add a shadow to the card*/
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
     /*border-width: thin;*/
