--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -105,6 +105,53 @@ ul.breadcrumb li a:hover {
 .submit-button{
     margin: 2%;
 }
+@keyframes answer-icon-fade-in {
+    from {
+        opacity: 0;
+        font-size: 0;
+    }
+    to   {
+        opacity: 1;
+        font-size: 300%;
+    }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes answer-icon-fade-in {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes answer-icon-fade-in {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes answer-icon-fade-in {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes answer-icon-fade-in {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+.material-icons.md-answer-icon{
+    display: inline;
+    position: relative;
+    font-size: 300%;
+    vertical-align: middle;
+}
+.material-icons.md-answer-icon.correct-animation{
+    /*Fades in the green check mark*/
+    animation-name: answer-icon-fade-in;
+    animation-duration: 0.5s;
+    animation-fill-mode: both;
+}
+
 /******************************************** Exercise Styling CSS ********************************************/
 .exercise{
     /*For Desktop*/
