--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -76,8 +76,9 @@ ul.breadcrumb li a:hover {
     /*padding: 20px;*/
     /*padding-bottom: 0px;*/
     margin:auto;
+    margin-left: 7.5%;
     /*margin-bottom: 1%;*/
-    width: 85%;
+    width: 100%;
     /*!*Add a shadow to the card*!*/
     /*box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);*/
     /*box-sizing: border-box;*/
@@ -144,9 +145,11 @@ ul.breadcrumb li a:hover {
     position: relative;
     font-size: 300%;
     vertical-align: middle;
+    left: -3%;
 }
 .material-icons.md-answer-icon.correct-animation{
     /*Fades in the green check mark*/
+    /*Add this to the class above? Thinking about removing the "incorrect" icon.*/
     animation-name: answer-icon-fade-in;
     animation-duration: 0.5s;
     animation-fill-mode: both;
