--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -45,7 +45,7 @@ ul.breadcrumb li a:hover {
     /*border-color: black;*/
     /*background-color: green;*/
 }
-@media only screen and (max-width: 1080px) {
+@media screen and (device-width: 360px) and (device-height: 640px) and (-webkit-device-pixel-ratio: 3) {
     .question-container{
         /*Increase the margin a bit to make it look more like a paper*/
         padding: 2%;
