--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -45,7 +45,7 @@ ul.breadcrumb li a:hover {
     /*border-color: black;*/
     /*background-color: green;*/
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (max-width: 360px) {
     .question-container{
         /*Increase the margin a bit to make it look more like a paper*/
         padding: 2%;
