--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -59,7 +59,7 @@ ul.breadcrumb li a:hover {
         /*border-width: thin;*/
         /*border-style: dotted;*/
         /*border-color: black;*/
-        background-color: blue;
+        background-color: orange;
     }
 }
 .text-container {
