--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -43,23 +43,15 @@ ul.breadcrumb li a:hover {
     /*border-width: thin;*/
     /*border-style: dotted;*/
     /*border-color: black;*/
-    background-color: green;
 }
-@media only screen and (max-width: 360px) {
+@media only screen and (max-width: 768px) {
     .question-container{
-        /*Increase the margin a bit to make it look more like a paper*/
-        padding: 2%;
-        margin-bottom: 1%;
-        margin-left: auto;
-        margin-right: auto;
+        /*The only difference is the width*/
         width: 100%;
-        /*Add a shadow to the card*/
-        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
         /*box-sizing: border-box;*/
         /*border-width: thin;*/
         /*border-style: dotted;*/
         /*border-color: black;*/
-        background-color: orange;
     }
 }
 .text-container {
