--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -65,6 +65,12 @@ ul.breadcrumb li a:hover {
     text-align: left;
     padding: 1%;
 }
+@media only screen and (max-width: 768px) {
+    .text-container{
+        /*Slightly smaller text on smaller devices*/
+        font-size: 120%;
+    }
+}
 .title-text-container {
     /*This container just contains the text to be displayed and applies the desired formating.*/
     margin: auto; /* Center the text container */
@@ -77,9 +83,9 @@ ul.breadcrumb li a:hover {
     padding: 1%;
 }
 @media only screen and (max-width: 768px) {
-    .text-container{
+    .title-text-container{
         /*Slightly smaller text on smaller devices*/
-        font-size: 120%;
+        font-size: 150%;
     }
 }
 
