--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -88,7 +88,6 @@ ul.breadcrumb li a:hover {
         font-size: 150%;
     }
 }
-
 .image-container{
     display: block; /* Make the image into a block element */
     margin-left: auto;
@@ -194,26 +193,28 @@ ul.breadcrumb li a:hover {
     /*For Desktop*/
     /*width : 250px; */
     /*height: 200px;*/
-
-    /*For Mobile*/
-    width: 75%;
-    height: 75%;
-    /*width: 15%;*/
-    /*height: 12%;*/
-    /*max-width: 15%;*/
-    /*max-height: 12%;*/
-    /*This centers the elements for mobile view.*/
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 5%;
-    margin-top: 5%;
+    width: 15%;
+    height: 12%;
     padding: 1%;
+    margin: 1%;
     /*Adding a grey border as standard - will turn green when exercise has been completed*/
     /*border: 1px solid lightgrey;*/
     /*border-style: dotted;*/
     /*border-color: black;*/
     /*border-width: medium;*/
+}
+@media only screen and (max-width: 768px) {
+    .exercise{
+        /*For Mobile*/
+        width: 75%;
+        height: 75%;
+        /*This centers the elements for mobile view.*/
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-bottom: 5%;
+        margin-top: 5%;
+    }
 }
 /*These are added on top of the standard css for the exercise buttons on the main page.*/
 .exercise-completed{
@@ -254,8 +255,9 @@ ul.breadcrumb li a:hover {
     box-shadow: 0 0 8px rgba(0, 0, 0, 0.18), 0 8px 16px rgba(0, 0, 0, 0.36);
     background: rgba(63,123,191, 0.40);
 }
-/*Styling for the divider containing all the xercises on the main page*/
+/*Styling for the divider containing all the exercises on the main page*/
 .exercise-container{
+    vertical-align: middle;
     /*padding: 2%;*/
     /*margin: auto;*/
     /*width: 100%;*/
@@ -273,21 +275,29 @@ ul.breadcrumb li a:hover {
     padding: 2%;
     margin: auto;
     margin-bottom: 1%;
-    /*margin-left: 10%;*/
-    width: 100%;
+    width: 80%;
     /*Add a shadow to the card*/
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
-
+}
+@media only screen and (max-width: 768px) {
+    .exercises-weekly-container{
+        width: 100%;
+    }
 }
 .exercises-weekly-text-container{
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 2%;
-    /*padding-left: 40px;*/
-    width: 90%;
-    font-size: 150%;
+    margin: 2%;
     /*border-style: dotted;*/
     /*border-color: black;*/
     /*border-width: medium;*/
+    font-size: 200%;
+}
+@media only screen and (max-width: 768px) {
+    .exercises-weekly-text-container{
+        margin-left: auto;
+        margin-right: auto;
+        /*padding-left: 40px;*/
+        width: 90%;
+        font-size: 150%;
+    }
 }
