--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -303,7 +303,7 @@ ul.breadcrumb li a:hover {
 }
 .footer{
     /*Fixates the footer to the bottom of the screen*/
-    position: absolute;
+    position: fixed;
     right: 0;
     bottom: 0;
     left: 0;
