--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -279,6 +279,7 @@ ul.breadcrumb li a:hover {
     /*Add a shadow to the card*/
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
     box-sizing: border-box;
+    padding-bottom: 3%;
 }
 @media only screen and (max-width: 768px) {
     .exercises-weekly-container{
@@ -303,7 +304,7 @@ ul.breadcrumb li a:hover {
 }
 .footer{
     /*Fixates the footer to the bottom of the screen*/
-    position: fixed;
+    position: absolute;
     right: 0;
     bottom: 0;
     left: 0;
@@ -315,4 +316,7 @@ ul.breadcrumb li a:hover {
     and adds padding to properly space the footer.*/
     background-color: #FAFAFA;
     padding-bottom: 20%;
+    border-style: dotted;
+    border-color: black;
+    border-width: medium;
 }
