--- a/intelligentlearning.css
+++ b/intelligentlearning.css
@@ -106,19 +106,23 @@ ul.breadcrumb li a:hover {
 }
 .answer-container{
     /* The container for the answer form card */
-    /*padding: 20px;*/
+    padding-left: 1%;
+    padding-right: 1%;
     /*padding-bottom: 0px;*/
     margin:auto;
     margin-left: 7.5%;
+    margin-right: 70%;
+    /*margin-right: ;*/
+    /*display: inline-block;*/
     /*margin-bottom: 1%;*/
-    width: 100%;
+    /*width: 100%;*/
     /*!*Add a shadow to the card*!*/
-    /*box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);*/
-    /*box-sizing: border-box;*/
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+    box-sizing: border-box;
     /*!*This gives the answer card a little bit more weight.*!*/
-    /*border-color: rgba(63, 69, 159, 0.2);*/
-    /*border-style: solid;*/
-    /*border-width: thin;*/
+    border-color: rgba(63, 69, 159, 0);
+    border-style: solid;
+    border-width: thin;
     /*border-style: dotted;*/
     /*border-color: black;*/
 
@@ -178,7 +182,7 @@ ul.breadcrumb li a:hover {
     position: relative;
     font-size: 300%;
     vertical-align: middle;
-    left: -3%;
+    /*left: -3%;*/
 }
 .material-icons.md-answer-icon.correct-animation{
     /*Fades in the green check mark*/
